fix(cors): tum originlere izin (allowedOriginPatterns *) - register 403 kesin cozum
Co-authored-by: Cursor <cursoragent@cursor.com>